SQ issues fixes